Base scripts created with test file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.2'
 
+    implementation files('libs/asmj.jar')
+
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
 }
