Base scripts expanded and program completed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,13 +20,11 @@ dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.2'
 
-    implementation files('libs/asmj.jar')
-
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'assembler.App'
+    mainClass = 'assembler.Main'
 }
