--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,13 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+    
+    // OpenAI API for AI-powered assembly generation - using OkHttp for simpler HTTP calls
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'assembler.Main'
+    mainClass = 'assembler.App'
 }
